@@ -3,6 +3,10 @@ xs 1.0 to xs 1.1
 
 Switched to the Meson/Ninja build system.
 
+Restrict the garbage collector to a single marking thread. Given the
+extremely low marker CPU utilization, it makes no sense to allocate
+one thread per CPU.
+
 Removed the ./xsdebug script, which was still es code and not usable
 with xs.
 
